--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,25 +1,21 @@
-name: GH Pages CI
+name: Refresh Pages list
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron:  '1 0 * * SUN'
+  workflow_dispatch:
 
 jobs:
-  build-deploy:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Get cached gems
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Build and deploy
-        uses: helaili/jekyll-action@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit to the repo
+        run: |
+          git config --global user.name 'Kevin Li'
+          git config --global user.email '102123416+afa5e@users.noreply.github.com'
+          git add .
+          git commit -am "Update articles list"
+          git push
